--- a/written-examination/schedule-management/app.css
+++ b/written-examination/schedule-management/app.css
@@ -37,7 +37,8 @@ html, body {
 .box__header-add {
     position: absolute;
     right: 1rem;
-    top: .5rem;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 1.5rem;
     text-decoration: none;
     color: #333;
